# commercial_network

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
net/: admin.py  api_views.py  constants.py  filters.py  models.py  paginators.py  serializers.py  services.py  tests.py  urls.py  validators.py
net/migrations/: 0001_initial.py  0002_netelement_products.py  0003_alter_netelement_products.py  0004_alter_netelement_email.py
products/: admin.py  api_views.py  constants.py  models.py  serializers.py  urls.py
products/migrations/: 0001_initial.py  0002_product_price.py  0003_remove_product_price.py
users/: admin.py  models.py  urls.py
users/migrations/: 0001_initial.py
